# wxDatabase

./: .gitignore  .goutputstream-O6TI6X  CMakeLists.txt  HISTORY  README  README.md  TODO.md  databaselayer.mk  databaselayer.project  databaselayer.txt  index.html  params.json  readme.txt  wxDatabase.project  wxDatabase.workspace
cmake/Modules/: FindFreeTDS.cmake  FindMySQL.cmake
docs/: Doxyfile  docs.txt  footer.html  header.html  logo.xcf
include/: database.h  defs.h  error_reporter.h  errorcodes.h  exceptions.h  prepared_statement.h  resultset.h  resultset_metadata.h  strconverter.h
include/mysql/: mysql_database.h  mysql_interface.h  mysql_param.h  mysql_preparedStatement_resultSet.h  mysql_preparedstatement.h  mysql_preparedstatement_parameter.h  mysql_preparedstatement_parametercollection.h  mysql_preparedstatement_wrapper.h  mysql_resultset_metadata.h
include/odbc/: odbc_database.h  odbc_inteface.h  odbc_param.h  odbc_preparedstatement.h  odbc_resultset.h  odbc_resultset_metadata.h
include/postgresql/: postgresql_database.h  postgresql_interface.h  postgresql_param.h  postgresql_preparedstatement.h  postgresql_preparedstatement_parameter_collector.h  postgresql_preparedstatement_wrapper.h  postgresql_resultset.h  postgresql_resultset_metadata.h
include/sqlite3/: sqlite_database.h  sqlite_preparedstatement.h  sqlite_resultset.h  sqlite_resultset_metatdat.h
include/wx/base/: dbconf.h  dlimpexp.h  setup.h  wxprec.h  xmlconf.h
include/wx/database/: database.h  dlimpexp.h  error_reporter.h  errorcodes.h  exception.h  prepared_statement.h  query_parser.h  resultset.h  resultset_metadata.h  setup.h  string_converter.h  wxprec.h
include/wx/database/mysql/: mysql_database.h  mysql_interface.h  mysql_param.h  mysql_preparedstatement.h  mysql_preparedstatement_parameter.h  mysql_preparedstatement_parameter_collection.h  mysql_preparedstatement_resultset.h  mysql_preparedstatement_wrapper.h  mysql_resultset_metadata.h
include/wx/database/odbc/: odbc_database.h  odbc_inteface.h  odbc_param.h  odbc_preparedstatement.h  odbc_resultset.h  odbc_resultset_metadata.h
include/wx/database/postgresql/: postgresql_database.h  postgresql_interface.h  postgresql_param.h  postgresql_preparedstatement.h  postgresql_preparedstatement_parameter_collection.h  postgresql_preparedstatement_wrapper.h  postgresql_resultset.h  postgresql_resultset_metadata.h
include/wx/database/sqlite3/: sqlite_database.h  sqlite_preparedstatement.h  sqlite_resultset.h  sqlite_resultset_metatdata.h
include/wx/database/tds/: tds_columndata.h  tds_database.h  tds_preparedstatement.h  tds_resultset.h  tds_resultset_metadata.h
lib/: readme.txt
sample/: database.cpp
samples/: mysql.cpp  odbc.cpp  postgres.cpp  sqlite3.cpp  wxDatabaseApp.conf  wxDatabaseApp.cpp
src/: PreparedStatement.cpp  database.cpp  error_reporter.cpp  query_paser.cpp  resultset.cpp  strconverter.cpp
src/base/: dbconf.cpp  wxprec.cpp  xmlconf.cpp
src/database/: database.cpp  error_reporter.cpp  prepared_statement.cpp  query_parser.cpp  resultset.cpp  string_converter.cpp  wxprec.cpp
src/database/mysql/: mysql_database.cpp  mysql_interface.cpp  mysql_param.cpp  mysql_preparedStatement_resultset.cpp  mysql_preparedstatement.cpp  mysql_preparedstatement_parameter.cpp  mysql_preparedstatement_parameter_collection.cpp  mysql_preparedstatement_wrapper.cpp  mysql_resultset_metadata.cpp
src/database/odbc/: odbc_database.cpp  odbc_inteface.cpp  odbc_param.cpp  odbc_preparedstatement.cpp  odbc_resultset.cpp  odbc_resultset_metadata.cpp
src/database/postgresql/: postgresql_database.cpp  postgresql_interface.cpp  postgresql_param.cpp  postgresql_preparedstatement.cpp  postgresql_preparedstatement_parameter_collection.cpp  postgresql_preparedstatement_wrapper.cpp  postgresql_resultset.cpp  postgresql_resultset_metadata.cpp
src/database/sqlite3/: sqlite_database.cpp  sqlite_preparedstatement.cpp  sqlite_resultset.cpp  sqlite_resultset_metatdata.cpp
src/database/tds/: tds_columndata.cpp  tds_database.cpp  tds_preparedstatement.cpp  tds_resultset.cpp  tds_resultset_metadata.cpp
src/mysql/: mysql_database.cpp  mysql_interface.cpp  mysql_param.cpp  mysql_preparedStatement_resultSet.cpp  mysql_preparedstatement.cpp  mysql_preparedstatement_parameter.cpp  mysql_preparedstatement_parametercollection.cpp  mysql_preparedstatement_wrapper.cpp  mysql_resultset_metadata.cpp
src/odbc/: odbc_database.cpp  odbc_inteface.cpp  odbc_param.cpp  odbc_preparedstatement.cpp  odbc_resultset.cpp  odbc_resultset_metadata.cpp
src/postgresql/: postgresql_database.cpp  postgresql_interface.cpp  postgresql_param.cpp  postgresql_preparedstatement.cpp  postgresql_preparedstatement_parameter_collector.cpp  postgresql_preparedstatement_wrapper.cpp  postgresql_resultset.cpp  postgresql_resultset_metadata.cpp
src/sqlite3/: sqlite_database.cpp  sqlite_preparedstatement.cpp  sqlite_resultset.cpp  sqlite_resultset_metatdata.cpp
vendors/mysql/include/: my_config.h
vendors/mysql/lib/: readme.txt
vendors/odbc/include/: readme.txt
vendors/sqlite3/.svn/: all-wcprops  entries
